--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,12 +10,11 @@
   </div>
   <input type="checkbox" id="hamburger" />
 
-  <!-- (C) MENU ITEMS -->
   <div id="hamitems">
-    <a href="#">First</a>
-    <a href="#">Second</a>
-    <a href="#">Third</a>
-    <a href="#">Forth</a>
+    <a href="#">a un sitio</a>
+    <a href="#">a otro sitio</a>
+    <a href="#">un lugar distinto</a>
+    <a href="#">¿quien sabe donde?</a>
   </div>
 </nav>
 <div class="mainContainer">
