Solucion de conflictos GIT

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <nav id="hamnav">
   <div class="menuBarra">
     <label for="hamburger"> &#9776; </label>
@@ -20,8 +19,5 @@
 </nav>
 <div class="mainContainer">
   <div id="aside"></div>
-  <div class="main"><app-characters></app-characters></div>
+  <div class="main"></div>
 </div>
-=======
-<router-outlet></router-outlet>
->>>>>>> 896f236a03685332c13ef63284a5b6097087ab89
