--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,5 @@
 </nav>
 <div class="mainContainer">
   <div id="aside"></div>
-  <div class="main"><app-characters></app-characters></div>
+  <div class="main"><router-outlet></router-outlet></div>
 </div>
-=======
-<router-outlet></router-outlet>
->>>>>>> 896f236a03685332c13ef63284a5b6097087ab89
