--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,1 @@
-<nav id="hamnav">
-  <div class="menuBarra">
-    <label for="hamburger"> &#9776; </label>
-    <div class="search">
-      <form action="#">
-        <input type="text" placeholder=" Search Courses" name="search" />
-        <button>🔍</button>
-      </form>
-    </div>
-  </div>
-  <input type="checkbox" id="hamburger" />
-
-  <div id="hamitems">
-    <a href="#">a un sitio</a>
-    <a href="#">a otro sitio</a>
-    <a href="#">un lugar distinto</a>
-    <a href="#">¿quien sabe donde?</a>
-  </div>
-</nav>
-<div class="mainContainer">
-  <div id="aside"></div>
-  <div class="main">
-    <router-outlet></router-outlet>
-  </div>
-</div>
+<app-sidebar></app-sidebar>
