--- a/src/app/login/login-form/login-form.component.html
+++ b/src/app/login/login-form/login-form.component.html
@@ -1,7 +1,7 @@
-<div class="container d-flex justify-content-start align-items-center "
-  style="max-width:100vw; min-height: 100vh; border: 1px solid black;">
+<div class="container d-flex justify-content-start align-items-center"
+  style="width: 80vw; height: 50vh; border: 1px solid black; background-color: yellow;">
 
-  <div class="col d-flex justify-content-center">
+  <div class="col d-flex justify-content-center align">
     <form class="w-50 mx-5">
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
