--- a/src/app/login/login-form/login-form.component.html
+++ b/src/app/login/login-form/login-form.component.html
@@ -1,29 +1,36 @@
-<div class="container d-flex justify-content-start align-items-center"
-  style="width: 80vw; height: 50vh; border: 1px solid black; background-color: yellow;">
+<div class="container d-flex justify-content-start align-items-center w-100 h-100"
+  style=" border: 1px solid black; background-color: blue;">
 
-  <div class="col d-flex justify-content-center align">
-    <form class="w-50 mx-5">
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+  <div class="row">
+    <div class="col">
+      <form class="mx-5">
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+    <!-- Imagen aleatoria -->
+    <div class="col d-flex justify-content-center align-items-center">
+      <div class="card" style="width: 18rem;">
+        <img src="../../../assets/marvelLogo.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
       </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
-      </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-  </div>
-  <div class="col d-flex justify-content-center">
-    <img src="../../../assets/pngwing.com (1).png" alt="" sizes="" srcset="">
-    <img src="../../../assets/pngwing.com (2).png" alt="" sizes="" srcset="">
-    <img src="../../../assets/pngwing.com (3).png" alt="" sizes="" srcset="">
-    <img src="../../../assets/pngwing.com (4).png" alt="" sizes="" srcset="">
-    <img src="../../../assets/pngwing.com (5).png" alt="" sizes="" srcset="">
+    </div>
   </div>
 </div>
