--- a/src/app/articles/pagination/pagination.component.html
+++ b/src/app/articles/pagination/pagination.component.html
@@ -1,1 +1,6 @@
-<p>pagination works!</p>
+<nav aria-label="Page navigation example">
+  <ul class="pagination">
+    <!-- <div class="page-item" (click)="nextPage()">Previous</div>
+    <div class="page-item" (click)="previusPage()">Next</div> -->
+  </ul>
+</nav>
