--- a/src/app/articles/characters/characters.component.html
+++ b/src/app/articles/characters/characters.component.html
@@ -1,13 +1,24 @@
 <div class="nano" *ngIf="characterArray != null">
   <div class="carjeta" *ngFor="let character of characterArray.data.results">
     <div class="elementCard">
-      <img
-        src="{{ character.thumbnail.path }}.{{ character.thumbnail.extension }}"
-        alt="{{ character.name }}"
-      />
-      <h6>{{ character.name }}</h6>
+      <a routerLink="/detail/{{ character.id }}">
+        <img
+          src="{{ character.thumbnail.path }}.{{
+            character.thumbnail.extension
+          }}"
+          alt="{{ character.name }}"
+      /></a>
+      <h6>{{ character.id }}</h6>
       <div class="cbody">
         <a href="{{ character.url }}" class="button">{{ character.name }}</a>
+        <a
+          class="button"
+          routerLink="/events/"
+          routerLinkActive="activebutton"
+          ariaCurrentWhenActive="page"
+        >
+          Events
+        </a>
       </div>
     </div>
   </div>
