--- a/src/app/articles/comics/comics.component.html
+++ b/src/app/articles/comics/comics.component.html
@@ -1,11 +1,13 @@
 <div class="nano" *ngIf="comicsArray != null">
   <div class="carjeta" *ngFor="let comic of comicsArray.data.results">
     <div class="elementCard">
-      <img
-        src="{{ comic.thumbnail.path }}.{{ comic.thumbnail.extension }}"
-        alt="{{ comic.name }}"
-      />
-      <h6>{{ comic.title }}</h6>
+      <a routerLink="/detail/{{ comic.id }}">
+        <img
+          src="{{ comic.thumbnail.path }}.{{ comic.thumbnail.extension }}"
+          alt="{{ comic.name }}"
+        />
+      </a>
+      <h6>{{ comic.id }}</h6>
       <div class="cbody">
         <a href="{{ comic.url }}" class="button">{{ comic.description }}</a>
       </div>
