--- a/src/app/articles/characters/characters.component.scss
+++ b/src/app/articles/characters/characters.component.scss
@@ -6,14 +6,11 @@
   width: 100%;
 
   .carjeta {
-    width: 15vw;
+    width: 20vw;
     height: 20vw;
     margin: 0.5em;
+    border-radius: 0.5em;
     .elementCard {
-      background: rgba(255, 255, 255, 0.5);
-      -webkit-backdrop-filter: blur(10px);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.25);
       border-radius: 0.2em;
       display: flex;
       justify-content: center;
@@ -22,6 +19,7 @@
       height: 100%;
       img {
         height: 10vw;
+        border-radius: 50%;
       }
       .cbody {
         display: flex;
