--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,47 +1,66 @@
 <div class="container-fluid">
-  <div class="row" style="height:13vh">
+  <div class="row" style="height: 13vh">
     <div class="col-sm-2 text-center justify-content-center">
-      <img class="col-sm-12 img-thumbnail" src="../assets/marvelLogo.png" alt="">
+      <img
+        class="col-sm-12 img-thumbnail"
+        src="../assets/marvelLogo.png"
+        alt=""
+      />
     </div>
     <div class="col"></div>
   </div>
 
-
-  <div class="row " style=" height:87vh;">
+  <div class="row" style="height: 87vh">
     <!-- LARGER THAN SM AND MD -->
-    <div class="col-sm-2 " style="background-color: brown;">
-      <div class="row mt-5 ">
+    <div class="col-sm-2" style="background-color: brown">
+      <div class="row mt-5">
         <div class="col d-none d-lg-block">
-          <div class="input-group mb-3 ">
-            <input type="text" class="form-control" placeholder="Busca..." aria-label="Búsqueda"
-              aria-describedby="basic-addon2">
+          <div class="input-group mb-3">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Busca..."
+              aria-label="Búsqueda"
+              aria-describedby="basic-addon2"
+            />
             <div class="input-group-append">
-              <button class="btn btn-outline-primary" type="button">Button</button>
+              <button class="btn btn-outline-primary" type="button">
+                Button
+              </button>
             </div>
           </div>
         </div>
       </div>
-      <div class="row text-center mt-5 ">
+      <div class="row text-center mt-5">
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
-          <div class="col d-none d-lg-block ">boton1</div>
-          <div class="col d-lg-none d-xl-none">modo movil</div>
+          <a routerLink="/characters" class="col d-none d-lg-block"
+            >Characters</a
+          >
+          <a routerLink="/characters" class="col d-lg-none d-xl-none"
+            >Characters</a
+          >
         </div>
       </div>
       <div class="row text-center mt-5">
-        <div class="col d-none d-lg-block">boton2</div>
-        <div class="col d-lg-none d-xl-none">modo movil</div>
+        <a routerLink="/comics" class="col d-none d-lg-block">Comics</a>
+        <a routerLink="/comics" class="col d-lg-none d-xl-none">Comics</a>
       </div>
       <div class="row text-center mt-5">
-        <div class="col d-none d-lg-block">boton3</div>
-        <div class="col d-lg-none d-xl-none">modo movil</div>
+        <a routerLink="/events" class="col d-none d-lg-block">Events</a>
+        <a routerLink="/events" class="col d-lg-none d-xl-none">Events</a>
       </div>
       <div class="row text-center mt-5">
-        <div class="col d-none d-lg-block">boton4</div>
-        <div class="col d-lg-none d-xl-none">modo movil</div>
+        <a routerLink="/creators" class="col d-none d-lg-block">Authors</a>
+        <a routerLink="/creators" class="col d-lg-none d-xl-none">Authors</a>
       </div>
     </div>
-    <div class="col d-flex align-items-center justify-content-center" style="background-color: yellow;">
+    <div
+      class="col d-flex align-items-center justify-content-center"
+      style="background-color: yellow"
+    >
       <div class="col d-flex align-items-center justify-content-center">
         <router-outlet></router-outlet>
       </div>
     </div>
+  </div>
+</div>
