--- a/src/app/articles/creators/creators.component.html
+++ b/src/app/articles/creators/creators.component.html
@@ -1,16 +1,18 @@
 <div class="nano" *ngIf="creatorsArray != null">
   <div class="carjeta" *ngFor="let creator of creatorsArray.data.results">
-    <div class="elementCard">
-      <img
-        src="{{ creator.thumbnail.path }}.{{ creator.thumbnail.extension }}"
-        alt="{{ creator.fullName }}"
-      />
-      <h6>{{ creator.fullName }}</h6>
-      <div class="cbody">
-        <a href="{{ creator.url }}" class="button">{{
-          creator.comics.items
-        }}</a>
-      </div>
-    </div>
+    <a routerLink="/detailcreator/{{ creator.id }}">
+      <div class="elementCard">
+        <img
+          src="{{ creator.thumbnail.path }}/portrait_fantastic.{{
+            creator.thumbnail.extension
+          }}"
+          alt="{{ creator.fullName }}"
+        />
+
+        <div class="cbody">
+          <p>{{ creator.fullName }}</p>
+        </div>
+      </div></a
+    >
   </div>
 </div>
