--- a/src/app/articles/pagination/pagination.component.html
+++ b/src/app/articles/pagination/pagination.component.html
@@ -1,6 +1,7 @@
 <nav aria-label="Page navigation example">
   <ul class="pagination">
-    <!-- <div class="page-item" (click)="nextPage()">Previous</div>
-    <div class="page-item" (click)="previusPage()">Next</div> -->
+    <button class="page-item" (click)="nextPage()">Previous</button>
+
+    <button class="page-item" (click)="previusPage()">Next</button>
   </ul>
 </nav>
