--- a/src/app/articles/events/events.component.html
+++ b/src/app/articles/events/events.component.html
@@ -3,6 +3,7 @@
     <a routerLink="/detailevent/{{ event.id }}">
       <div class="elementCard">
         <img
+          class="circular"
           src="{{ event.thumbnail.path }}/standard_fantastic.{{
             event.thumbnail.extension
           }}"
