--- a/src/app/user-access/login-form/login-form.component.html
+++ b/src/app/user-access/login-form/login-form.component.html
@@ -3,23 +3,25 @@
 
   <div class="row">
     <div class="col">
-      <form class="mx-5">
+      <form [formGroup]="formLogin" (ngSubmit)="onSubmit()" class="mx-5">
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <label class="form-label">Email</label>
+          <input type="email" class="form-control" aria-describedby="emailHelp" formControlName="email">
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
+          <label class="form-label">Password</label>
+          <input type="password" class="form-control" formControlName="password" id="exampleInputPassword1">
         </div>
         <div class="mb-3 form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+          <label class="form-check-label" for="exampleCheck1">He leído y acepto las condiciones estipuladas</label>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <input type="submit" value="Enviar">
       </form>
+      <button class="btn btn-info" (click)="onClick()">Log in with Google</button>
     </div>
+
     <!-- Imagen aleatoria -->
     <div class="col d-flex justify-content-center align-items-center">
       <div class="card" style="width: 18rem;">
