--- a/src/app/aboutus/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus/aboutus.component.html
@@ -1,69 +1,49 @@
-<div class="container" style="padding: 2vh;">
+<div class="container-fluid pt-5 pb-5" style="background-color: #ED1D24;">
+  <div class="row mb-5 mt-4 ">
+    <div class="col d-flex align-items-center justify-content-center">
+      <h1 class="text-white">¿Quien somos?</h1>
+    </div>
+  </div>
 
+  <div class="row mt-2 ">
+    <div class="col d-flex align-items-center justify-content-center">
+      <img class="" src=" ../../../assets/NicePng_red-dead-redemption-logo_3238100.png" style="width:10em;height:10em;">
+    </div>
+    <div class="col">
+      <p>Hola! Somos Cristian, Israel y Matias, un grupo de desarrolladores Front-End Juniors de Angular a los que se
+        les ha asignado un proyecto, el mismo que estas viendo ahora :) Esperamos que la aplicación sea de tu agrado!
+        Nos puedes contactar en las redes sociales mencionadas a continuación: </p>
+    </div>
+  </div>
 
-
-
-  <div class="card mb-3 text-bg-danger "   style="width:  100vw;"  style="height: 40vh;"     >
-    <div class="row g-0">
-      <div class="col-md-5">
-        <img src="https://fondosmil.com/fondo/29592.jpg " class="img-fluid"   style="width:70vh; height: 50vh;"  style="padding: 1vh;"   alt="...">
-      </div>
-
-
-      <div class="col-md-7">
+  <div class="row mt-5">
+    <div class="col mt-5  d-flex align-items-center justify-content-center">
+      <div class="card h-100 " style="width: 18rem;">
+        <img src="../../../assets/avatarIsrael.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Quienes somos</h5>
-          <p class="card-text">Somos un grupo de jóvenes que decidieron crear este proyecto para superar todos los objetivos necesarios para cumplir con los estándares necesarios del curso.
-
-          </p>
+          <h5 class="card-title text-center">Isra</h5>
+          <p class="card-text ">Angular Front-End Junior Developer</p>
         </div>
       </div>
-
-
     </div>
-  </div>
-
-
-
-  <div class="card-group">
-    <div class="card text-bg-danger"  style="padding: 2vh;" >
-      <img src=" https://es-static.z-dn.net/files/d39/11c3b6400cf369f44705768ef73029dd.jpg " class="card-img-top" alt="..."  style="width:50vh;  height:55vh;">
-      <div class="card-body">
-        <h5 class="card-title">Pepe 1</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <a href="#"  target="_blank" class="card-link">Linkedin</a>
-        <a href="https://github.com/crraroldan?tab=repositories" target="_blank" class="card-link">GitHub</a>
+    <div class="col mt-5  d-flex align-items-center justify-content-center">
+      <div class="card h-100 " style="width: 18rem;">
+        <img src="../../../assets/avatarCristian.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title text-center">Cristian</h5>
+          <p class="card-text">Front-end Angular Junior Developer</p>
+        </div>
       </div>
     </div>
-
-    <div class="card text-bg-danger"  style="padding: 2vh;"  >
-      <img src="  https://scontent-cdt1-1.xx.fbcdn.net/v/t39.30808-6/301577646_509160741212281_3868829311311556872_n.png?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IHtTAkQgjxAAX_iqJBr&_nc_ht=scontent-cdt1-1.xx&oh=00_AfC1nwJz_oTBjgm2i1cqvAr4_nl7DFyKXLX190dUePWuIA&oe=638A1535   " class="card-img-top" alt="..." style="width:50vh;  height:55vh;" >
-      <div class="card-body">
-        <h5 class="card-title">Pepe 2</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        <a href="#" target="_blank" class="card-link">Linkedin</a>
-        <a href="#" target="_blank" class="card-link">GitHub</a>
-      </div>
-    </div>
-
-    <div class="card text-bg-danger"  style="padding: 2vh;"   >
-      <img src=" https://www.eltiempo.com/files/article_multimedia/uploads/2019/10/10/5d9f589f26b95.jpeg  " class="card-img-top" alt="..."   style="width:50vh;  height: 55vh;">
-      <div class="card-body">
-        <h5 class="card-title">Pepe 3</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        <a href="#"  target="_blank"  class="card-link">Linkedin</a>
-        <a href="#"  target="_blank"  class="card-link">GitHub</a>
+    <div class="col mt-5 d-flex align-items-center justify-content-center">
+      <div class="card h-100 " style="width: 18rem;">
+        <img src="../../../assets/avatarMio.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title text-center">Matias</h5>
+          <p class="card-text">Front-end Angular Junior Developer<br>Diseñador y modelador 3D<br>Desarrollador de
+            Videojuegos Indie</p>
+        </div>
       </div>
     </div>
   </div>
-
-
-
-
-  <!-- Content here -->
 </div>
-
-
-
-
-
