Añadido routing y link de aboutus

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,6 @@
     </div>
   </nav>
 
-
   <div class="row " style="height: 87vh">
     <!-- LARGER THAN SM AND MD -->
     <div class="col-sm-2 d-none d-sm-block" style="background-color: #ED1D24; min-width: 8em">
@@ -62,6 +61,10 @@
       <div class="row text-center mt-5">
         <a routerLink="/creators"
           class="col d-none d-sm-block text-decoration-none h5 text-white font-weight-bold">Authors</a>
+      </div>
+      <div class="row text-center mt-5">
+        <a routerLink="/about"
+          class="col d-none d-sm-block text-decoration-none h5 text-white font-weight-bold">Nosotros</a>
       </div>
     </div>
     <div class="col d-flex align-items-center justify-content-center">
