--- a/src/app/app.componentdetail.scss
+++ b/src/app/app.componentdetail.scss
@@ -12,16 +12,13 @@
       height: 5vw;
       margin: 0.5em 0;
     }
-    div {
+    .detalle {
       display: flex;
       justify-content: center;
-
-      div {
-        overflow: hidden;
-        text-overflow: clip;
+      align-items: center;
+      flex-direction: column;
+      img {
         width: 100%;
-        height: 4vw;
-        margin: 0.5em;
       }
     }
   }
