--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="row sticky-top bg-light d-none d-sm-block justify-content-center align-items-center"
     style=" height: 13vh; background-color: #ED1D24;">
     <div class="col-sm-2">
-      <img class="img-thumbnail" src="../assets/marvelLogo.png" alt="" />
+      <img class=" img-thumbnail" src="../assets/marvel-logo.svg" alt="" />
     </div>
     <div class="col"></div>
   </div>
@@ -10,7 +10,7 @@
   <nav class="navbar navbar-expand-lg bg-light d-block d-sm-none">
     <div class="container-fluid" style="background-color: #ED1D24">
       <a class="navbar-brand" href="#">
-        <img class="img-fluid img-thumbnail" src="../assets/marvelLogo.png" alt="" style="max-width: 10em;" />
+        <img class="img-fluid img-thumbnail" src="../assets/marvel-logo.svg" alt="" style="max-width: 10em;" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
