Arreglo de pestaña personajes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link text-white font-weight-bold" aria-current="page" href="#">Home</a>
+          <a class="nav-link text-white font-weight-bold" routerLink="/characters">Personajes</a>
           <a class="nav-link text-white font-weight-bold" routerLink="/comics">Comics</a>
           <a class="nav-link text-white font-weight-bold" routerLink="/events">Eventos</a>
           <a class="nav-link text-white font-weight-bold" routerLink="/creators">Creadores</a>
