Implementación de links a perfiles de github

--- a/src/app/aboutus/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus/aboutus.component.html
@@ -23,6 +23,8 @@
         <div class="card-body">
           <h5 class="card-title text-center">Isra</h5>
           <p class="card-text ">Angular Front-End Junior Developer</p>
+          <p class="card-footer text-center"><a class="text-decoration-none" href="https://github.com/Iminguet">Github
+              Profile</a></p>
         </div>
       </div>
     </div>
@@ -32,6 +34,8 @@
         <div class="card-body">
           <h5 class="card-title text-center">Cristian</h5>
           <p class="card-text">Front-end Angular Junior Developer</p>
+          <p class="card-footer text-center"><a class="text-decoration-none" href="https://github.com/crraroldan">Github
+              Profile</a></p>
         </div>
       </div>
     </div>
@@ -41,7 +45,9 @@
         <div class="card-body">
           <h5 class="card-title text-center">Matias</h5>
           <p class="card-text">Front-end Angular Junior Developer<br>Diseñador y modelador 3D<br>Desarrollador de
-            Videojuegos Indie</p>
+            Videojuegos Indie </p>
+          <p class="card-footer text-center"><a class="text-decoration-none" href="https://github.com/Mikiexe">Github
+              Profile</a></p>
         </div>
       </div>
     </div>
