--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,8 +6,8 @@
   width: 100%;
 
   .carjeta {
-    width: 15vw;
-    height: 20vw;
+    width: 100%;
+    height: 100%;
     margin: 0.5em;
     border-radius: 0.5em;
     .elementCard {
@@ -18,7 +18,7 @@
       flex-direction: column;
       height: 100%;
       img {
-        height: 10vw;
+        height: 100%;
       }
       .circular {
         border-radius: 50%;
@@ -32,7 +32,21 @@
         width: 100%;
         height: 100%;
         border-radius: 0.2em;
+        background-color: red;
+        color: white;
+        font-weight: bold;
+        text-align: center;
       }
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .nano {
+    .carjeta {
+      width: 15vw;
+      height: 20vw;
+      margin: 0.5em;
     }
   }
 }
