--- a/src/app/app.componentdetail.scss
+++ b/src/app/app.componentdetail.scss
@@ -2,10 +2,13 @@
   margin-top: 2em;
   display: flex;
   justify-content: space-between;
+  width: 100%;
 
   .list {
-    border: 2px solid black;
-    width: 22%;
+    background-color: beige;
+    width: 50%;
+    padding: 0.5em;
+    border: 2px solid white;
     .cabeceraLista {
       font-weight: bold;
       text-align: center;
@@ -28,16 +31,63 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-direction: column;
   img {
-    height: 75vh;
+    width: 100vw;
   }
   .info {
-    width: 50%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     .anchors {
       display: flex;
       flex-direction: column;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .listItems {
+    margin-top: 2em;
+    display: flex;
+    justify-content: space-between;
+
+    .list {
+      width: 22%;
+      .cabeceraLista {
+        font-weight: bold;
+        text-align: center;
+        height: 5vw;
+        margin: 0.5em 0;
+      }
+      .detalle {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        img {
+          width: 100%;
+        }
+      }
+    }
+  }
+
+  .imageAnTitle {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    img {
+      width: 40vw;
+    }
+    .info {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      .anchors {
+        display: flex;
+        flex-direction: column;
+      }
     }
   }
 }
