--- a/src/app/app.componentdetail.scss
+++ b/src/app/app.componentdetail.scss
@@ -5,9 +5,9 @@
   width: 100%;
 
   .list {
-    background-color: beige;
+    background-color: #ededed;
     width: 50%;
-    padding: 0.5em;
+    padding: 0.2em;
     border: 2px solid white;
     .cabeceraLista {
       font-weight: bold;
@@ -17,14 +17,15 @@
     }
     .detalle {
       width: 100%;
-      padding: 0.5em;
+
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
       div {
-        height: 20vw;
+        height: 70vw;
         text-align: center;
+        margin-bottom: 2vh;
         a {
           height: 100%;
           margin-top: 0.5em;
@@ -32,15 +33,16 @@
           justify-content: space-between;
           align-items: center;
           flex-direction: column;
-
+          background-color: red;
           img {
-            width: 50%;
+            width: 100%;
           }
           h5 {
             width: 100%;
             text-align: center;
-            background-color: black;
             color: white;
+            text-overflow: "...";
+            overflow: hidden;
           }
         }
       }
@@ -54,7 +56,8 @@
   align-items: center;
   flex-direction: column;
   img {
-    width: 100vw;
+    width: 85vw;
+    border: 10px solid #ededed;
   }
   .info {
     width: 80%;
