--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,7 +32,7 @@
         width: 100%;
         height: 100%;
         border-radius: 0.2em;
-        background-color: red;
+        background-color: #ed1d24;
         color: white;
         font-weight: bold;
         text-align: center;
