--- a/src/app/app.componentdetail.scss
+++ b/src/app/app.componentdetail.scss
@@ -23,17 +23,16 @@
       align-items: center;
       flex-direction: column;
       div {
-        height: 70vw;
         text-align: center;
         margin-bottom: 2vh;
         a {
-          height: 100%;
+          height: 70vw;
           margin-top: 0.5em;
           display: flex;
           justify-content: space-between;
           align-items: center;
           flex-direction: column;
-          background-color: red;
+          background-color: #ed1d24;
           img {
             width: 100%;
           }
@@ -75,22 +74,13 @@
     margin-top: 2em;
     display: flex;
     justify-content: space-between;
-
     .list {
-      width: 22%;
-      .cabeceraLista {
-        font-weight: bold;
-        text-align: center;
-        height: 5vw;
-        margin: 0.5em 0;
-      }
+      width: 33%;
       .detalle {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        img {
-          width: 100%;
+        div {
+          a {
+            height: 45vw;
+          }
         }
       }
     }
@@ -102,7 +92,7 @@
     align-items: center;
     flex-direction: row;
     img {
-      width: 40vw;
+      width: 35vw;
     }
     .info {
       width: 50%;
